[tool.poetry]
name = "visionlog"
version = "0.1.1"
description = "A universal structured logging library for analytics tracking"
authors = ["Alan Szmyt <szmyty@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/szmyty/visionlog"
homepage = "https://github.com/szmyty/visionlog"
documentation = "https://github.com/szmyty/visionlog#readme"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.0"
structlog = "^23.1.0"
orjson = "^3.8.1"
opentelemetry-api = {version = "^1.15.0", optional = true}
opentelemetry-sdk = {version = "^1.15.0", optional = true}
click = "^8.1.3"
device-detector = {version = "^5.0.1", optional = true}
httpx = "^0.28.1"

[tool.poetry.extras]
tracing = ["opentelemetry-api", "opentelemetry-sdk"]
device = ["device-detector"]

[tool.poetry.scripts]
visionlog-cli = "visionlog.cli:log"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.11"
ruff = ">=0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=visionlog --cov-report=term-missing"

[tool.coverage.run]
branch = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
